syntax = "proto3";

package bread;

import "google/protobuf/duration.proto";
import "github.com/sr/operator/operator.proto";

option go_package = "breadpb";

message RPCEvent {
	operator.Call call = 1;
}

message GithubEvent {
	string id = 1;
	string type = 2;
	bytes payload = 3;
	repeated HTTPRequest forwarded = 4;
}

message JIRAEvent {
	int32 id = 1;
	string type = 2;
	string issue_key = 3;
	repeated HTTPRequest forwarded = 4;
}

message HTTPRequest {
	string method = 1;
	string path = 2;
	map<string, string> query = 3;
	uint32 status_code = 7;
	google.protobuf.Duration duration = 8;
	string error = 9;
}
